--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,10 +27,28 @@ dist.dir=dist
 dist.jar=${dist.dir}/Almoxys.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.commons-beanutils-1.8.2.jar=libs\\commons-beanutils-1.8.2.jar
+file.reference.commons-collections-3.2.1.jar=libs\\commons-collections-3.2.1.jar
+file.reference.commons-digester-2.1.jar=libs\\commons-digester-2.1.jar
+file.reference.commons-logging-1.1.jar=libs\\commons-logging-1.1.jar
+file.reference.groovy-all-2.0.1.jar=libs\\groovy-all-2.0.1.jar
+file.reference.iText-2.1.7.js2.jar=libs\\iText-2.1.7.js2.jar
+file.reference.jasperreports-5.6.0.jar=libs\\jasperreports-5.6.0.jar
+file.reference.javax.servlet.jar=libs\\javax.servlet.jar
+file.reference.postgresql-9.4.1209.jar=libs\\postgresql-9.4.1209.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.commons-beanutils-1.8.2.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-logging-1.1.jar}:\
+    ${file.reference.groovy-all-2.0.1.jar}:\
+    ${file.reference.iText-2.1.7.js2.jar}:\
+    ${file.reference.jasperreports-5.6.0.jar}:\
+    ${file.reference.javax.servlet.jar}:\
+    ${file.reference.postgresql-9.4.1209.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
